--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -322,10 +322,12 @@ jobs:
             echo $API_URL_STRING
             echo 'export API_URL=$API_URL_STRING' >> $BASH_ENV
             echo $BASH_ENV
+            cat $BASH_ENV
       - run:
           name: Backend smoke test.
           command: |
             echo $BASH_ENV
+            cat $BASH_ENV
             source $BASH_ENV
             echo $API_URL
             if curl -s $API_URL
