--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -381,7 +381,7 @@ jobs:
             then
               aws cloudformation delete-stack --stack-name "back-end-stack-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "front-end-stack-${OldWorkflowID}"
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
             fi
 
 workflows:
