--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,12 +393,12 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]     -- commented lines are due to unfixable lodash vulnrabilities
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       - deploy-infrastructure:
-          requires: [test-frontend, test-backend] # re-add [scan-frontend, scan-backend] when the lodash problem is fixed
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
               only: [master]
