--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            exit 1
+            aws cloudformation delete-stack --stack-name "back-end-stack-${CIRCLE_WORKFLOW_ID}"
+            aws cloudformation delete-stack --stack-name "front-end-stack-${CIRCLE_WORKFLOW_ID}"
+            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID} --recursive
       - slack/notify:
           channel: slack-notifications
           event: fail
@@ -264,7 +265,7 @@ jobs:
             npm run build
             aws s3 cp ./dist/ s3://udapeople-${CIRCLE_WORKFLOW_ID}/ --recursive
       - jq/install
-      - revert-migrations
+      - destroy-environment
 
   deploy-backend:
     docker:
@@ -297,6 +298,7 @@ jobs:
           command: |
             apk --no-cache add curl jq
       - revert-migrations
+      - destroy-environment
 
   smoke-test:
     docker:
@@ -323,7 +325,7 @@ jobs:
             then
               exit 1
             else
-              exit 0
+              exit 1
             fi
       - run:
           name: Frontend smoke test.
@@ -336,7 +338,7 @@ jobs:
               exit 1
             fi
       - jq/install
-      - revert-migrations
+      - destroy-environment
 
   cloudfront-update:
     docker:
@@ -355,7 +357,7 @@ jobs:
               --tags project=udapeople \
               --stack-name udapeople-cloudfront \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID}"
-      - revert-migrations
+      - destroy-environment
 
   cleanup:
     docker:
