--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,7 +311,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt-get update; apt-get install -y curl awscli
+            apt-get update; apt-get install -y curl
       - run:
           name: Get backend url
           command: |
@@ -338,6 +338,13 @@ jobs:
             else
               exit 1
             fi
+      - run:
+          name: install curl for failure
+          when: on_fail
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
       - jq/install
       - destroy-environment
 
