--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,7 +311,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt-get update; apt-get install -y curl gzip
+            apt-get update; apt-get install -y curl unzip
       - run:
           name: Get backend url
           command: |
