--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,7 +203,7 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook .circleci/ansible/configure-server.yml -i ~/project/.circleci/ansible/inventory.txt
-            ansible-playbook .circleci/ansible/configure-prometheus-node-exporter -i ~/project/.circleci/ansible/inventory.txt
+            ansible-playbook .circleci/ansible/configure-prometheus.yml -i ~/project/.circleci/ansible/inventory.txt
       - run:
           name: install curl for failure
           when: on_fail
