--- a/backend/package.json
+++ b/backend/package.json
@@ -34,12 +34,12 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^8.0.11",
-    "@nestjs/core": "^8.0.6",
+    "@nestjs/core": "^8.0.11",
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.11.11",
-    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/swagger": "^5.1.0",
     "@nestjs/typeorm": "^6.3.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/winston": "^2.4.4",
@@ -61,21 +61,20 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
-    "typeorm": "^0.2.37",
+    "typeorm": "^0.2.38",
     "uuid": "^3.4.0",
-    "winston": "^3.3.3",
     "winston-loggly-bulk": "^2.0.3",
     "winston-slack-webhook": "^0.1.6"
   },
   "devDependencies": {
-    "@nestjs/testing": "^8.0.6",
+    "@nestjs/testing": "^6.11.11",
     "@types/express": "^4.17.3",
     "@types/jest": "^27.0.2",
     "@types/joi": "^14.3.4",
     "@types/node": "^11.15.9",
     "@types/supertest": "^2.0.8",
-    "jest": "^27.1.1",
-    "nodemon": "^2.0.12",
+    "jest": "^27.2.5",
+    "nodemon": "^2.0.13",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.2",
     "standard-version": "^9.3.1",
@@ -85,8 +84,8 @@
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "5.11.0",
-    "typescript": "^v4.2.3",
-    "webpack": "^5.53.0",
+    "typescript": "^4.1.6",
+    "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-node-externals": "^1.7.2"
   },
