--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -298,7 +298,8 @@ jobs:
             cp -R /tmp/node_modules_cache node_modules
             cp -R /tmp/dist dist
             cp -R dist/.env .env
-            ansible-playbook ../.circleci/ansible/deploy-backend.yml -i .circleci/ansible/inventory.txt
+            cd ..
+            ansible-playbook .circleci/ansible/deploy-backend.yml -i .circleci/ansible/inventory.txt
       - run:
           name: install curl for failure
           when: on_fail
