--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,6 +299,7 @@ jobs:
             cp -R /tmp/dist dist
             cp -R dist/.env .env
             cd ..
+            pwd
             ansible-playbook .circleci/ansible/deploy-backend.yml -i .circleci/ansible/inventory.txt
       - run:
           name: install curl for failure
