--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Copying the Directory's contents (sub directories/files)
   become: true
   copy:
-    src: ~/backend/
+    src: /root/project/backend/
     dest: .
 
 - name: Start pm2
