--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -294,7 +294,7 @@ jobs:
       - run:
           name: Deploy backend
           command: |
-            cd backend
+            cd ./backend
             cp -R /tmp/node_modules_cache node_modules
             cp -R /tmp/dist dist
             cp -R dist/.env .env
