--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,9 +1,20 @@
 ---
+- name: "update apt packages."
+  become: yes
+  apt:
+    update_cache: yes
+
 - name: Copying the Directory's contents (sub directories/files)
   become: true
   copy:
-    src: /root/project/backend/
-    dest: .
+    src: /tmp/dist/
+    dest: ./dist/
+
+- name: Copying the Directory's modules (sub directories/files)
+  become: true
+  copy:
+    src: /tmp/node_modules_cache/
+    dest: ./node_modules/
 
 - name: Start pm2
   become: yes
