--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: Copying the Directory's modules (sub directories/files)
   become: true
-  timeout: 1200
+  timeout: "1200"
   copy:
     src: /tmp/node_modules_cache/
     dest: ./node_modules/
