--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -12,6 +12,7 @@
 
 - name: Copying the Directory's modules (sub directories/files)
   become: true
+  no_output_timeout: 1200
   copy:
     src: /tmp/node_modules_cache/
     dest: ./node_modules/
