--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -17,7 +17,7 @@
     npm install
   args:
     executable: /bin/bash
-    creates: "~/node_modules"
+    creates: ~/node_modules
 
 - name: install modules
   become: yes
@@ -26,7 +26,7 @@
     npm build
   args:
     executable: /bin/bash
-    creates: "~/dist"
+    creates: ~/dist
 
 - name: Start pm2
   become: yes
