--- a/backend/package.json
+++ b/backend/package.json
@@ -34,13 +34,13 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^8.0.11",
-    "@nestjs/core": "^8.0.11",
+    "@nestjs/core": "^8.0.0-alpha.5",
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.11.11",
     "@nestjs/swagger": "^5.1.0",
-    "@nestjs/typeorm": "^6.3.4",
+    "@nestjs/typeorm": "^7.1.5",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/winston": "^2.4.4",
     "class-transformer": "^0.4.0",
@@ -59,7 +59,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^7.9.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.5.4",
+    "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.38",
     "uuid": "^3.4.0",
