--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,14 +262,17 @@ jobs:
           name: Deploy frontend objects
           command: |
             source $BASH_ENV
+            npm install webpack-dev-server -g
             cd frontend
 
-            sed '$ d' .env.sample > .env
+            sed '$d' .env.sample > .env
             echo "API_URL=${API_URL}" >> .env
 
             npm install
             npm run build:prod
             mv .env dist/.env
+            cat .env
+            ls -la dist
             aws s3 cp ./dist/ s3://udapeople-${CIRCLE_WORKFLOW_ID}/ --recursive
       - jq/install
       - destroy-environment
