--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -39,3 +39,8 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+
+outputs:
+  BackendURL:
+    Value: !GetAtt EC2Instance.PublicIp
+    Description: URL for the backend server
