--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,9 +257,10 @@ jobs:
           command: |
             PRIVATE_IP=($(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PrivateIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}"))
-            export API_URL="http://${PRIVATE_IP}:3030"
-            echo "export API_URL=${API_URL}" >> $BASH_ENV
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" \
+              --output text))
+            API_URL_STRING="http://${PRIVATE_IP}:3030"
+            echo "export API_URL=${API_URL_STRING}" >> $BASH_ENV
 
       - run:
           name: Deploy frontend objects
