--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,7 +436,7 @@ workflows:
               only: [master]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
       - cleanup:
-          requires: [cloudfront-update]
+          requires: [smoke-test]
+      - cloudfront-update:
+          requires: [cleanup]
